discussion/kv_engine/141635/141635_rev44_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39620: Define bootstrap interface [2.2/3]

Define a bootstrap interface during startup and allow
for starting up without any interfaces.

Change-Id: I1bf375dedddfd20902607e235bb0aaadb0d835e5

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 04:48:26.000000000
Message: 
Uploaded patch set 44: Patch Set 43 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 06:04:06.000000000
Message: 
Patch Set 44: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36714/ : FAILURE

Failure of GoogleTest "MaxConnectionTest.MaxUserConnectionsConnection":

<pre>
[ RUN      ] MaxConnectionTest.MaxUserConnectionsConnection
unknown file: error: C++ exception with description "SSL handshake failed: AsyncSocketException: Network error, type = Network error, errno = 10053 (Unknown error)" thrown in the test body.
[  FAILED  ] MaxConnectionTest.MaxUserConnectionsConnection (40 ms)
MaxConnectionTest.MaxUserConnectionsConnection
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36714/ )

Failure of an engine_testapp test:

<pre>
Running [0093/0157]: vbucket cas (replica)...(96 ms) OK


89% tests passed, 47 tests failed out of 409

Total Test time (real) = 865.67 sec

The following tests FAIL
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36714/ )

Timeout of a CTest test 409/409 Test #252: ep_testsuite.full_eviction.comp_active ........................................................................................} ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36714/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9751/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10: error: "gtest/gtest.h" file not found [clang-diagnostic-error]
#include <gtest/gtest.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9751/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/folly.exploded/include/folly/portability/GTest.h:32:10:
error: "gtest/gtest.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9751/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11474/ : FAILURE

Failure of GoogleTest "TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl
[2021-06-11T05:18:23.252Z] unknown file: Failure
[2021-06-11T05:18:23.252Z] C++ exception with description "SSL handshake failed: AsyncSocketException: Network error, type = Network error" thrown in the test body.
[2021-06-11T05:18:23.252Z] [  FAILED  ] TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl, where GetParam() = McbpSsl (2 ms)
TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11474/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10398/ : FAILURE

Failure of GoogleTest "TransportProtocols/ArithmeticTest.TestArithmeticNoCreateOnNotFound/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/ArithmeticTest.TestArithmeticNoCreateOnNotFound/McbpSsl_XattrYes_JsonYes_SnappyYes
[2021-06-11T05:24:59.745Z] unknown file: Failure
[2021-06-11T05:24:59.745Z] C++ exception with description "SSL handshake failed: AsyncSocketException: Network error, type = Network error" thrown in SetUp().
[2021-06-11T05:24:59.745Z] [  FAILED  ] TransportProtocols/ArithmeticTest.TestArithmeticNoCreateOnNotFound/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (2 ms)
TransportProtocols/ArithmeticTest.TestArithmeticNoCreateOnNotFound/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10398/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11326/ : FAILURE

Failure of GoogleTest "TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl":

<pre>
[ RUN      ] TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl
[2021-06-11T05:55:29.202Z] unknown file: Failure
[2021-06-11T05:55:29.202Z] C++ exception with description "SSL handshake failed: AsyncSocketException: Network error, type = Network error" thrown in the test body.
[2021-06-11T05:55:29.202Z] [  FAILED  ] TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl, where GetParam() = McbpSsl (3 ms)
TransportProtocols/BucketTest.TestCreateBucketAlreadyExists/McbpSsl
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11326/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19329/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11751/ : FAILURE

Failure of GoogleTest "TransportProtocols/GetSetTest.TestAdd/McbpSsl_XattrYes_JsonYes_SnappyYes":

<pre>
[ RUN      ] TransportProtocols/GetSetTest.TestAdd/McbpSsl_XattrYes_JsonYes_SnappyYes
[2021-06-11T05:46:58.636Z] unknown file: Failure
[2021-06-11T05:46:58.636Z] C++ exception with description "SSL handshake failed: AsyncSocketException: Network error, type = Network error" thrown in SetUp().
[2021-06-11T05:46:58.636Z] [  FAILED  ] TransportProtocols/GetSetTest.TestAdd/McbpSsl_XattrYes_JsonYes_SnappyYes, where GetParam() = (McbpSsl, XattrYes, 4-byte object <00-00 00-00>, 4-byte object <00-00 00-00>) (101 ms)
TransportProtocols/GetSetTest.TestAdd/McbpSsl_XattrYes_JsonYes_SnappyYes
</pre>
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11751/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8346/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/276/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31381/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
